fixed menu alignment

--- a/assets/sass/noesya-hugo/_style.sass
+++ b/assets/sass/noesya-hugo/_style.sass
@@ -53,13 +53,19 @@ header#document-header
             padding-top: 30px
         @include media-breakpoint-up(md)
             padding-top: $grid-gutter
-        .container > *
-            pointer-events: all
+        .container 
+            align-items: flex-start
+            height: $header-logo-height
+            @include media-breakpoint-up(md)
+                height: $header-logo-height-desktop
+            > *
+                pointer-events: all
         button[type="button"]
             align-items: center
             display: flex
             height: 50px
             justify-content: flex-end
+            transform: translateY(-15.5px)
             width: 50px
             z-index: 9
             span, span:first-of-type, &::after, &::before
@@ -77,7 +83,7 @@ header#document-header
             &::after
                 transform: translateY(9px)
             &::before
-                transform: translateY(calc(-9px))
+                transform: translateY(-9px)
             span:not(:first-of-type)
                 &::after, &::before
                     background: $color-accent
